# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]

## [1.2.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
- Pasta olio e peperoncino.
- Gun upgrade system and upgrade items.
  - To upgrade a gun, hold the gun in the off-hand and use (right-click) the upgrade item held in the main hand.

### Changed
- Require NeoForge 20.4.200+.
- Increase composting chance of half-sized chili potato sandwich.

### Removed
- Smithing table recipe for gun with bayonet.

## [1.1.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.80-beta+.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2]
- Require Minecraft 1.20.4 and NeoForge 20.4.80-beta+.

### Changed
- Change mod icon.

### Fixed
- Fix ammo consumption when loading machine gun.

## [1.0.1]
- Port to 1.20.4 NeoForge.
- Require Minecraft 1.20.4 and NeoForge 20.4.80-beta+.