@@ -1,2 +1,2 @@
-// 1.20.4	2024-03-15T21:39:58.9765424	Languages: en_us for mod: chilibulletweapons
-32ec761277baf6c875b3925063c3e21b0390f37c assets/chilibulletweapons/lang/en_us.json
+// 1.20.4	2024-03-20T19:22:16.2267746	Languages: en_us for mod: chilibulletweapons
+64af92a6d74c04297135caa1db5b9e080427fe92 assets/chilibulletweapons/lang/en_us.json
