@@ -32,5 +32,8 @@
   "itemGroup.chilibulletweapons.main": "Chili Bullet Weapons",
   "subtitles.item.chilibulletweapons.gun.action_close": "Chili Bullet Gun loads",
   "subtitles.item.chilibulletweapons.gun.shoot": "Chili Bullet Gun fires",
-  "subtitles.item.chilibulletweapons.gun.upgrade": "Chili Bullet Gun upgraded"
+  "subtitles.item.chilibulletweapons.gun.upgrade": "Chili Bullet Gun upgraded",
+  "tooltip.chilibulletweapons.upgrade_gun_1": "Hold gun in off-hand and",
+  "tooltip.chilibulletweapons.upgrade_gun_2": "use this item in main hand",
+  "tooltip.chilibulletweapons.upgrade_gun_3": "to upgrade gun."
 }
